lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/array_copy_array/array_copy_array2/array_copy_array2.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/array_copy_array/array_copy_array2/array_copy_array2.c:22:30: error: use of undeclared identifier 's__src'
    array_copy_array(s__dst ,s__src );
                             ^
1 error generated.
